--- a/artists.html
+++ b/artists.html
@@ -40,16 +40,9 @@
     <main class="container">
         <section class="content-section">
             <h2>Browse Artists</h2>
-            <div class="search-bar-row">
-                <button class="menu-toggle" aria-label="Toggle menu">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </button>
-                <div class="search-container">
-                    <input type="text" id="searchInput" placeholder="Search for songs or artists...">
-                    <button id="searchBtn"><i class="fas fa-search"></i></button>
-                </div>
+            <div class="search-container">
+                <input type="text" id="artistSearch" placeholder="Search for an artist...">
+                <button id="artistSearchBtn"><i class="fas fa-search"></i></button>
             </div>            
             
             <div id="artistsList"></div>
