--- a/artists.html
+++ b/artists.html
@@ -16,8 +16,8 @@
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="artists.html">Artists</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="artists.html" class="active">Artists</a></li>
                     <li><a href="#">Top Songs</a></li>
                     <li><a href="#">New Additions</a></li>
                     <li><a href="#">About</a></li>
@@ -37,13 +37,25 @@
         </div>
     </header>
 
+<!-- Sidebar Ad -->
+        <aside class="sidebar-ad">
+            <div class="ad-unit">
+                <span>Advertisement</span>
+                <div class="ad-content">
+                    <img src="images/kt-ad.png" alt="KT Media" class="sidebar-ad">
+                    <!-- Ad code here -->
+                </div>
+            </div>
+        </aside>
+
+
     <main class="container">
         <section class="content-section">
             <h2>Browse Artists</h2>
-            <div class="search-container">
+            <!--div class="search-container">
                 <input type="text" id="artistSearch" placeholder="Search for an artist...">
                 <button id="artistSearchBtn"><i class="fas fa-search"></i></button>
-            </div>            
+            </div-->            
             
             <div id="artistsList"></div>
             <div class="pagination" id="artistPagination"></div>
@@ -69,7 +81,7 @@
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h3>Contact</h3>
+                    <h3><ins>Contact</ins></h3>
                     <ul>
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Privacy Policy</a></li>
