--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="artists.html">Artists</a></li>
                     <li><a href="#">Top Songs</a></li>
                     <li><a href="#">New Additions</a></li>
@@ -52,6 +52,7 @@
             <div class="ad-unit">
                 <span>Advertisement</span>
                 <div class="ad-content">
+                    <img src="images/kt-ad.png" alt="KT Media" class="sidebar-ad">
                     <!-- Ad code here -->
                 </div>
             </div>
@@ -163,7 +164,7 @@
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h3>Contact</h3>
+                    <h3><ins>Contact</ins></h3>
                     <ul>
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Privacy Policy</a></li>
