--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <img src="images/zhubinv.png" alt="ZaburiHub Logo" class="footer-logo">
-                    <p>Your ultimate destination for song lyrics</p>
+                    <p>Your ultimate destination for Ugandan Gospel song lyrics</p>
                 </div>
                 <div class="footer-section">
                     <h3><ins>Quick Links</ins></h3>
@@ -160,3 +160,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
